# rdf-uploader

./: .gitignore  .pre-commit-config.yaml  DEVELOP.md  Dockerfile  LICENSE  README.md  SPEC.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-docker.yaml  build-package.yaml  ci.yaml  minor-release.yaml  minor_release.yaml  point-release.yaml  point_release.yaml  pr-build.yaml  pr_build.yaml  pre-commit-ci.yaml  release.yaml
ci/: build_and_publish_pkg.sh  build_docker_image.sh  survey_repo.sh
src/rdf_uploader/: __about__.py  __init__.py  cli.py  endpoints.py  file_readers.py  uploader.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_endpoints.py  test_file_readers.py  test_uploader.py
tests/data/: sample.nq  sample.ttl
