[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "rdf-uploader"
dynamic = [
    "version",
]
description = "A tool for uploading RDF data to SPARQL endpoints"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Vlad Korolev", email="vlad@v-lad.org"},
]
keywords = [
 "rdf",
 "tools",
 "loader"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",

    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "coverage>=7.8.0",
]

[project.scripts]
rdf-uploader = "rdf_uploader.cli:main"

[project.urls]
"Homepage" = "https://github.com/vladistan/rdf-uploader"
"Bug Tracker" = "https://github.com/vladistan/rdf-uploader/issues"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
  { path = "CHANGES.md" },
]

[tool.hatch.version]
path = "src/rdf_uploader/__about__.py"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["src/rdf_uploader"]


[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
show-fixes = true
output-format = "full"


[tool.ruff.lint]
select = [
    "F", "W", "E", "C90", "I", "N", "UP", "ASYNC", "S", "BLE", "FBT", "B",
    "A", "DTZ", "ISC", "PIE", "T20", "PYI", "PT", "RSE", "RET", "SLF", "SLOT",
    "SIM", "TCH", "INT", "ARG", "PTH", "TD", "ERA", "PD", "PGH", "PL", "TRY",
    "FLY", "NPY", "PERF", "FURB", "LOG", "RUF",
    ]
ignore = [
    "ARG002", # TODO: fix later
    "E203",
    "E266",
    "E501",
    "E731",
    "TD002", # TODO: fix later
    "TD003", # TODO: fix later
    "PLR0913", # TODO: fix later
    "PLR0917", # TODO: fix later
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ASYNC230",
    "FBT001",
    "FBT002",
    "FBT003",
    "S101",
    "S603",
    "S106",
    "S108",
    "PLR0913", # TODO: fix later
    "PLR0917", # TODO: fix later
]
"src/rdf_uploader/cli.py" = [
    "B008",
    "FBT001",
    "FBT003",
    "PLR0913",
    "PLR0917",
]
"src/rdf_uploader/endpoints.py" = [
    "PLR6301", # TODO: fix later
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["rdf_uploader"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"


[tool.coverage.run]
relative_files = true
branch = true
source = ["rdf_uploader"]
omit = ["tests/*"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "normal"
pretty = true
show_column_numbers = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "truthy-bool"]



[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
